--- a/doc/modifier.css
+++ b/doc/modifier.css
@@ -19,3 +19,28 @@ header {
     text-align: center;
     color: rgb(255, 255, 255);
 }
+
+/** Form **/
+form {
+    padding-top: 100px;
+}
+
+/*personnalisation du bouton*/
+.bouton{
+    background-color: #b3ee10;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 7px;
+    width: 120px;
+}
+
+.choix{
+    padding-top: 10px;
+    padding-bottom: 15px;
+    text-align: center;
+}
+
+.clik{
+    text-align: center;
+}
