--- a/doc/modifierAlbum.css
+++ b/doc/modifierAlbum.css
@@ -14,7 +14,7 @@ h1 a{
 
 /** header **/
 header {
-    background-color: #333;
+    background-color: #333333;
     padding: 2px;
     text-align: center;
     color: rgb(255, 255, 255);
@@ -22,11 +22,16 @@ header {
 
 /** Form **/
 form {
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
-.add{
-    padding-bottom: 20px;
+.choix{
+    text-align: center;
+}
+
+.mdf{
+    text-align: center;
+    padding: 25px;
 }
 
 button{
@@ -34,6 +39,6 @@ button{
     border-radius: 10px;
     color: #ffffff;
     font-size: 20px;
-    padding: 5px;
-    width: 100px;
+    padding: 10px;
+    width: 180px;
 }
