--- a/doc/supprimerAlbum.css
+++ b/doc/supprimerAlbum.css
@@ -24,3 +24,16 @@ header {
 form {
     padding-top: 100px;
 }
+
+.sure{
+    padding-bottom: 30px;
+}
+
+button{
+    background-color: #ee1022;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px;
+    width: 200px;
+}
