--- a/doc/supprimerIMG.css
+++ b/doc/supprimerIMG.css
@@ -22,18 +22,15 @@ header {
 
 /** Form **/
 form {
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
-.add{
-    padding-bottom: 20px;
-}
-
-button{
-    background-color: #b3ee10;
-    border-radius: 10px;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 5px;
-    width: 100px;
+/*personnalisation du bouton*/
+.bouton{
+     background-color: #ee1022;
+     border-radius: 10px;
+     color: #ffffff;
+     font-size: 20px;
+     padding: 10px;
+     width: 200px;
 }
